--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,325 @@
-/* code dibawah ini untuk membuat css di setting ke default */
-*,
-html,
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap");
+
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.fContainer {
+nav {
   display: flex;
-  /* justify-content: center; */
   width: 100%;
-  height: 100vh;
-  background-color: white;
-}
-
-.wrapper {
-  display: flex;
+  background: #ffffff;
+  background-color: #ffffff;
+  position: relative;
   justify-content: space-between;
-  align-items: center;
+  text-align: center;
+  padding: 10px 30px;
+  box-shadow: 0px 3px 10px 0 rgba(38, 85, 255, 0.477);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+nav .icon {
+  cursor: pointer;
+  padding: 6px 0px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: auto 0;
+}
+
+nav ul li {
+  margin: 0;
+}
+
+nav ul li a {
+  color: #303030;
+  font-size: 16px;
+  text-decoration: none;
+  letter-spacing: 0px;
+  padding: 5px 10px;
+}
+
+nav ul li:hover a {
+  color: #483df9;
+}
+
+nav .search_box {
+  display: flex;
+  margin: auto 0;
+  height: 35px;
+  line-height: 35px;
+}
+
+nav .search_box input {
+  border: none;
+  outline: none;
+  background: #ebeaff;
+  height: 100%;
+  padding: 0 10px;
+  font-size: 16px;
+  width: 350px;
+}
+
+nav .search_box span {
+  color: #303030;
   font-size: 20px;
-  padding: 15px;
+  background: #ebeaff;
+  height: 100%;
+  padding: 8px;
+  position: relative;
+  cursor: pointer;
+  z-index: 1;
+}
+
+nav .search_box span::after {
+  height: 100%;
+  width: 0%;
+  content: "";
+  background: #483df9;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+nav .search_box span:hover::after {
   width: 100%;
-  height: 80px;
-  background-color:rgb(50, 50, 52)0, 139);
-  box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.5);
 }
 
-.brand {
-  /* default dari flex adalah column */
-  display: flex;
-  /* row untuk membuat teks menjadi ke kanan dan kiri */
-  flex-direction: row;
-  font-size: 1.5em;
-  padding: 15px;
-  text
+nav .bar {
+  position: relative;
+  margin: auto;
+  display: none;
 }
 
-.firstname {
-  color: black;
-  font-weight: 700;
-}
-
-.lastname {
-  color:darkblue;
-  font-weight: 700;
-  padding-left: 4px;
-}
-
-.navigation {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.navigation > li {
-  list-style-type: none;
-  padding: 15px;
-}
-
-.navigation > li > a {
-  color: black;
+nav .bar span {
+  position: absolute;
+  color: #303030;
   font-size: 20px;
-text-decoration: none;
-text-transform: capitalize;
 }
 
-.navigation > li > a:hover {
-  color: crimson;
-  transition: all .3s ease-in-out;
-}
-.active {
-  /* background-color: red; */
-  color: white;
-  padding: 15px;
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  display: none;
 }
 
-.active:hover {
-  color: black !important;
+@media screen and (max-width: 1275px) {
+  nav {
+    display: block;
+    padding: 0;
+  }
+  nav .icon {
+    display: inline-block;
+    padding: 10px 30px;
+  }
+  nav .search_box {
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    margin-bottom: 15px;
+  }
+  nav .search_box input {
+    width: 90%;
+  }
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    background: #ffffff;
+    height: 0;
+    visibility: hidden;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+  }
+  nav ul li {
+    text-align: center;
+  }
+  nav ul li a {
+    color: #303030;
+    font-size: 16px;
+    padding: 10px;
+    display: block;
+  }
+  nav .bar {
+    display: block;
+    position: absolute;
+    top: 15px;
+    right: 30px;
+    cursor: pointer;
+  }
+  nav .bar #times {
+    display: none;
+  }
+  #check:checked ~ nav .bar #times {
+    display: block;
+  }
+  #check:checked ~ nav .bar #bars {
+    display: none;
+  }
+  #check:checked ~ nav ul {
+    visibility: visible;
+    height: 280px;
+  }
+}
+section {
+  background: #ebeaff;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-position: center;
+  background-color: #ebeaff;
+  background-size: cover;
+  top: 0;
+  z-index: -1;
+}
+
+
+
+
+/* Footer */
+footer{
+    width: 100%;
+    position:absolute;
+    bottom: 0;
+    background: #ffffff;
+    color: #303030;
+    padding: 10px 10px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    font-size: 13px;
+    line-height: 20px;
+    box-shadow: 0px 3px 10px 0 rgba(38, 85, 255, 0.477);
+}
+.row{
+    width: 98%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.col{
+    flex-basis: 25%;
+    padding: 10px;
+}
+.col:nth-child(2), .col:nth-child(3){
+    flex-basis: 15%;
+}
+
+.logo{
+    width: 280px;
+    margin-bottom: 30px;
+}
+.col h3{
+    width: fit-content;
+    margin-bottom: 40px;
+    position: relative;
+}
+.email-id{
+    width: fit-content;
+    border-bottom: 1px solid #ccc;
+    margin: 20px 0;
+}
+ul li{
+    list-style: none;
+    margin-bottom: 12px;
+}
+ul li a{
+    text-decoration: none;
+    color: #303030;
+}
+form{
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 50px;
+}
+form .far{
+    font-size: 18px;
+    margin-right: 10px;
+}
+form input{
+    width: 100%;
+    background: transparent;
+    color: #303030;
+    border: 0;
+    outline: none;
+}
+form button{
+    background: transparent;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+}
+form button .fas{
+    font-size: 16px;
+    color: #ccc;
+}
+.social-icons .fab{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    color: #303030;
+    background: #fff;
+    margin-right: 15px;
+    cursor: pointer;
+}
+hr{
+    width: 90%;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+    margin: 10px auto;
+}
+.copyright{
+    text-align: center;
+}
+.underline{
+    width: 100%;
+    height: 5px;
+    background: #767676;
+    border-radius: 3px;
+    position: absolute;
+    top: 25px;
+    left: 0;
+    overflow: hidden;
+}
+.underline span{
+    width: 15px;
+    height: 100%;
+    background: #fff;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    animation: moving 2s linear infinite;
+}
+@keyframes moving{
+    0%{
+        left: -20px;
+    }
+    100%{
+        left: 100px;
+    }
+}
+
+
+@media (max-width: 700px){
+    footer{
+        bottom: unset;
+    }
+    .col{
+        flex-basis: 100%;
+
+    }
+    .col:nth-child(2), .col:nth-child(3){
+        flex-basis: 100%;
 }
