--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,9 @@ hr{
     left: 10px;
     animation: moving 2s linear infinite;
 }
+
+
+
 @keyframes moving{
     0%{
         left: -20px;
@@ -312,7 +315,7 @@ hr{
 }
 
 
-@media (max-width: 700px){
+/* @media (max-width: 700px) {
     footer{
         bottom: unset;
     }
@@ -322,4 +325,4 @@ hr{
     }
     .col:nth-child(2), .col:nth-child(3){
         flex-basis: 100%;
-}
+} */
